# vizzio

./: .env.example  .gitignore  .gitmodules  ANUNCIOS_REDES_SOCIAIS.md  COPILOT_BLUEPRINT_COMPLETE_STACK.md  Cargo.toml  Cargo.toml.bak  Dockerfile.backend  Dockerfile.frontend  ESTIMATIVA_TEMPO_COMPLETO.md  FINAL_TEST.md  GITHUB_SECRETS_SETUP.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  LAUNCH_CHECKLIST.md  NAVIGATION.md  NOTIFICATION_SETUP.md  PARTNER_NOTIFICATIONS_GUIDE.md  PLANO_LANCAMENTO_HOJE.md  QUICK_START.md  README.md  README_VIZZIO_MVP.md  RELEASE_ANNOUNCEMENT_v0.1.0.md  RELEASE_NOTES.md  RESPOSTA_FINAL_LANCAMENTO_HOJE.md  SOLUTIONS_COMPARISON.md  STATUS_LANCAMENTO.md  STRUCTURE.md  VIZZIO_MVP_COMPLETE.md  launch_today.ps1  package.json  release_output.txt  server_output.txt  test-notifications.ps1  tsconfig.json
.github/: act-history.json
.github/scripts/: generate-email.ts  generate-executive-report.js  monitor.sh  send-emails.js
.github/workflows/: api-contract-testing.yml  ci.yml  deploy.yml  notify-partners.yml  release.yml  weekly-executive-report.yml
avila/: ACTION_PLAN_IMMEDIATE.md  BLUEPRINT_AVILA_v1.0-v10.0.md  Cargo.toml.example  EXECUTIVE_SUMMARY.md  INDEX.md  README.md
avila/avila-alert/: .gitignore  BLUEPRINT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md
avila/avila-alert/examples/: builder.rs  custom_handler.rs  formatters.rs
avila/avila-alert/src/: builder.rs  formatter.rs  handler.rs  lib.rs  manager.rs  types.rs
avila/avila-alert/tests/: integration_tests.rs
avila/avila-alloc/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  rustfmt.toml
avila/avila-alloc/benches/: allocators.rs
avila/avila-alloc/examples/: advanced.rs
avila/avila-alloc/src/: lib.rs  test_helpers.rs
avila/avila-alloc/src/arena/: static_arena.rs
avila/avila-alloc/src/pool/: mod.rs
avila/avila-alloc/src/stack/: box_type.rs  map.rs  mod.rs  queue.rs
avila/avila-alloc/src/utils/: alignment.rs  bits.rs  const_assert.rs  error.rs  layout.rs  mod.rs  ptr.rs
avila/avila-analises/: BLUEPRINT.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
avila/avila-analises/benches/: ml_inference.rs  query_performance.rs
avila/avila-analises/docs/: getting-started.md
avila/avila-analises/docs/api/: industry40-production-guide.md
avila/avila-analises/docs/tutorials/: README.md
avila/avila-analises/examples/: README.md  basic_tracking.rs  industry40_oee.rs  streaming_analytics.rs  user_segmentation.rs
avila/avila-analises/src/: cohort_pure.rs  config.rs  error.rs  segmentation_pure.rs
avila/avila-analises/src/api/handlers/: industry40.rs
avila/avila-analises/src/ml/: model_registry.rs  regression.rs
avila/avila-analises/src/streaming/: aggregation.rs  kafka_connector.rs  processor.rs  window.rs
avila/avila-analises/tests/integration/: mod.rs  websocket_tests.rs
avila/avila-analises/tests/unit/: cohort_tests.rs  mod.rs
avila/avila-analises/tests/unit/industry40/: iot_tests.rs  oee_tests.rs  predictive_maintenance_tests.rs
avila/avila-arrow/: README.md
avila/avila-atom/: CHANGELOG.md  LICENSE-APACHE  LICENSE-MIT  MIGRATION_GUIDE.md  PERFORMANCE.md  README.md  (+2 more)
avila/avila-browser/: CONTRIBUTORS.md  Cargo.toml  README.md
avila/avila-browser/bindings/javascript/: README.md
avila/avila-browser/docs/: CONTRIBUTING.md  ROADMAP.md
avila/avila-browser/src/: lib.rs
avila/avila-browser/src/api/: grpc.rs  webdriver.rs
avila/avila-browser/src/core/: mod.rs
avila/avila-browser/src/crypto/: encryption.rs  signing.rs
avila/avila-browser/src/crypto/pqc/: dilithium.rs  kyber.rs  mod.rs
avila/avila-browser/src/network/: mod.rs  tcp.rs
avila/avila-browser/src/privacy/: cookies.rs  fingerprinting.rs  referrer.rs  trackers.rs
avila/avila-browser/src/storage/: database.rs  filesystem.rs  keychain.rs  mod.rs
avila/avila-cell/: Cargo.toml  DECISION_GUIDE.md
avila/avila-cell/avila-cell-core/: Cargo.toml
avila/avila-cell/avila-cell-core/src/: message.rs  state.rs
avila/avila-cell/examples/: gmail_production.rs
avila/avila-cell/src/: auth.rs  notification.rs
avila/avila-codec/: ARCHITECTURE.md  Cargo.toml  LICENSE-APACHE  README.md
avila/avila-codec/src/: base58.rs  base64.rs  error.rs  multibase.rs  traits.rs  url.rs
avila/avila-codec/src/binary/: mod.rs
avila/avila-codec/src/checksum/: crc.rs
avila/avila-codec/src/network/: mod.rs
avila/avila-codec/src/simd/: avx2.rs
avila/avila-coordinator/: Cargo.toml
avila/avila-coordinator/src/: builder.rs  concurrent.rs  dependencies.rs  lib.rs  metrics.rs  resources.rs  serde_support.rs  workflow.rs
crates/avila-ifc/: Cargo.toml
crates/avila-ifc/examples/: read_ifc.rs
crates/avila-ifc/src/: entities.rs  error.rs  file.rs  geometry.rs  lib.rs  query.rs  step_parser.rs
crates/avila-ifc/tests/: integration_test.rs
crates/avila-vision/: Cargo.toml
crates/avila-vision/src/: camera.rs  clipping.rs  frustum.rs  instancing.rs  lib.rs  lod.rs  material.rs  octree.rs  raycast.rs  renderer.rs  webxr.rs
crates/vizzio-chatbot/: Cargo.toml  README.md
crates/vizzio-chatbot/src/: handlers.rs  main.rs
crates/vizzio-viewer/: ARCHITECTURE.md  Cargo.toml  README.md  VZZ086_25 Magnussão - Res. Heitor - Estrutural Executivo - Rev08.ifc
crates/vizzio-viewer/src/: cache.rs  lib.rs  main.rs  perf.rs  server.rs
docs/: 00_LEIA_PRIMEIRO.md  ARCHITECTURE.md  BUILD_MONITOR.md  CONFIGURATION.md  ENV_VARS.md  HTTP_SERVER_PATTERN.md  IMPLEMENTATION_COMPLETE.md  INCIDENT_RESPONSE_PLAYBOOK.md  INDEX.md  INTEGRATION_GUIDE.md  NOTIFICATION_SETUP.md  PARTNER_INTEGRATIONS.md  README.md  README_VIZZIO.md  ROADMAP.md  START_HERE.md  STRUCTURE_VISUAL.md  TEST_NOTIFICATION.md  TEST_WORKFLOW.md  UNIFIED_COMPLETE.md  VIZZIO_UNIFIED.md  github-app-manifest.json  grafana-dashboard.json  openapi.yaml  postman-collection.json
scripts/: README.md  build.ps1  build.sh
temp-ai-proxy/: Cargo.toml  INTEGRATION.md  README.md
temp-ai-proxy/src/: api_key.rs  client.rs  config.rs  error.rs  handlers.rs  lib.rs  main.rs  middleware.rs  models.rs  rate_limit.rs  router.rs
(+519 files in other folders)
