[workspace]
resolver = "2"

members = [
    "D:/Vizzio/crates/avila-aead",
    "D:/Vizzio/crates/avila-ai-proxy",
    "D:/Vizzio/crates/avila-alert",
    "D:/Vizzio/crates/avila-alloc",
    "D:/Vizzio/crates/avila-arrow",
    "D:/Vizzio/crates/avila-cache",
    "D:/Vizzio/crates/avila-codec",
    "D:/Vizzio/crates/avila-compress",
    "D:/Vizzio/crates/avila-config",
    "D:/Vizzio/crates/avila-coordinator",
    "D:/Vizzio/crates/avila-crdt",
    "D:/Vizzio/crates/avila-crypto",
    "D:/Vizzio/crates/avila-curve",
    "D:/Vizzio/crates/avila-db",
    "D:/Vizzio/crates/avila-distributed-system",
    "D:/Vizzio/crates/avila-dns",
    "D:/Vizzio/crates/avila-election",
    "D:/Vizzio/crates/avila-error",
    "D:/Vizzio/crates/avila-error-old",
    "D:/Vizzio/crates/avila-fft",
    "D:/Vizzio/crates/avila-finite-fields",
    "D:/Vizzio/crates/avila-framework",
    "D:/Vizzio/crates/avila-frontend",
    "D:/Vizzio/crates/avila-future",
    "D:/Vizzio/crates/avila-geo",
    "D:/Vizzio/crates/avila-gis-desktop",
    "D:/Vizzio/crates/avila-gossip",
    "D:/Vizzio/crates/avila-grpc",
    "D:/Vizzio/crates/avila-hash",
    "D:/Vizzio/crates/avila-id",
    "D:/Vizzio/crates/avila-image",
    "D:/Vizzio/crates/avila-jwt",
    "D:/Vizzio/crates/avila-kdf",
    "D:/Vizzio/crates/avila-lease",
    "D:/Vizzio/crates/avila-linalg",
    "D:/Vizzio/crates/avila-loadbalancer",
    "D:/Vizzio/crates/avila-lock",
    "D:/Vizzio/crates/avila-log",
    "D:/Vizzio/crates/avila-mac",
    "D:/Vizzio/crates/avila-math",
    "D:/Vizzio/crates/avila-meta",
    "D:/Vizzio/crates/avila-metrics",
    "D:/Vizzio/crates/avila-ml",
    "D:/Vizzio/crates/avila-modular",
    "D:/Vizzio/crates/avila-molecule",
    "D:/Vizzio/crates/avila-monitor",
    "D:/Vizzio/crates/avila-mpc",
    "D:/Vizzio/crates/avila-ndarray",
    "D:/Vizzio/crates/avila-nucleus",
    "D:/Vizzio/crates/avila-numeric",
    "D:/Vizzio/crates/avila-oauth",
    "D:/Vizzio/crates/avila-organ",
    "D:/Vizzio/crates/avila-organism",
    "D:/Vizzio/crates/avila-parallel",
    "D:/Vizzio/crates/avila-partition",
    "D:/Vizzio/crates/avila-pki",
    "D:/Vizzio/crates/avila-pool",
    "D:/Vizzio/crates/avila-post-quantum",
    "D:/Vizzio/crates/avila-prime",
    "D:/Vizzio/crates/avila-primitives",
    "D:/Vizzio/crates/avila-proxy",
    "D:/Vizzio/crates/avila-quantum",
    "D:/Vizzio/crates/avila-quic",
    "D:/Vizzio/crates/avila-rand",
    "D:/Vizzio/crates/avila-rand-simple",
    "D:/Vizzio/crates/avila-random",
    "D:/Vizzio/crates/avila-rayon-simple",
    "D:/Vizzio/crates/avila-regex",
    "D:/Vizzio/crates/avila-replication",
    "D:/Vizzio/crates/avila-serde",
    "D:/Vizzio/crates/avila-serde-old",
    "D:/Vizzio/crates/avila-serialize",
    "D:/Vizzio/crates/avila-shard",
    "D:/Vizzio/crates/avila-signature",
    "D:/Vizzio/crates/avila-stealth",
    "D:/Vizzio/crates/avila-sync",
    "D:/Vizzio/crates/avila-tcp",
    "D:/Vizzio/crates/avila-term",
    "D:/Vizzio/crates/avila-terminal",
    "D:/Vizzio/crates/avila-threshold",
    "D:/Vizzio/crates/avila-time",
    "D:/Vizzio/crates/avila-tissue",
    "D:/Vizzio/crates/avila-tls",
    "D:/Vizzio/crates/avila-tokenizers",
    "D:/Vizzio/crates/avila-tracing",
    "D:/Vizzio/crates/avila-udp",
    "D:/Vizzio/crates/avila-validate",
    "D:/Vizzio/crates/avila-web",
    "D:/Vizzio/crates/avila-websocket",
    "D:/Vizzio/crates/avila-zkp",
    "D:/Vizzio/crates/avl-auth",
    "D:/Vizzio/crates/avl-console",
    "D:/Vizzio/crates/avl-loadbalancer",
    "D:/Vizzio/crates/avl-observability",
    "D:/Vizzio/crates/avl-queue",
    "D:/Vizzio/crates/avl-secrets",
    "D:/Vizzio/crates/avl-storage",
    "D:/Vizzio/crates/avx-api-core",
    "D:/Vizzio/crates/avx-cli",
    "D:/Vizzio/crates/avx-config",
    "D:/Vizzio/crates/avx-events",
    "D:/Vizzio/crates/avx-gpu",
    "D:/Vizzio/crates/avx-http",
    "D:/Vizzio/crates/vizzio-chatbot",
    "D:/Vizzio/crates/avila-bim",
    "D:/Vizzio/crates/avila-vision",
    "D:/Vizzio/crates/vizzio-viewer",
]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = "thin"

