[package]
name = "avila-ai-proxy"
version = "0.1.0"
edition = "2021"
authors = ["Avila Team <nicolas@avila.inc>"]
description = "Servidor de IA sem censura com múltiplos modelos Ollama - 100% Rust"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
tokio-tungstenite = "0.21"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# Serialização
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto para API keys
sha2 = "0.10"
rand = "0.8"
base64 = "0.21"

# Async
futures = "0.3"
futures-util = "0.3"
async-stream = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Rate limiting
governor = "0.6"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "avila-ai-proxy"
path = "src/main.rs"

[[bin]]
name = "avila-ai"
path = "src/bin/avila-ai-cli.rs"

[[bench]]
name = "proxy_bench"
harness = false
