[package]
name = "avila-alloc"
version = "0.1.0"
edition = "2021"
authors = ["Avila Team"]
license = "MIT OR Apache-2.0"
description = "Zero-dependency, stack-first memory allocation library for Rust"
repository = "https://github.com/avila/avila-alloc"
documentation = "https://docs.rs/avila-alloc"
keywords = ["allocator", "no-std", "stack", "arena", "embedded"]
categories = ["memory-management", "no-std", "embedded"]
readme = "README.md"

[dependencies]
# Optional dependencies
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[features]
default = []
std = []
serde = ["dep:serde"]
experimental = []

[[bench]]
name = "allocators"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
