[package]
name = "avila-browser"
version = "0.1.0"
edition = "2021"
authors = ["Vizzio Team <contact@vizzio.dev>"]
license = "MIT"
description = "High-assurance web browser with multi-layer onion routing architecture"
repository = "https://github.com/vizzio/avila-browser"
documentation = "https://docs.rs/avila-browser"
keywords = ["browser", "privacy", "security", "tor", "anonymity"]
categories = ["network-programming", "web-programming", "cryptography"]
readme = "README.md"

[lib]
name = "avila_browser"
path = "src/lib.rs"

[[bin]]
name = "avila-cli"
path = "src/cli/main.rs"
required-features = ["cli"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Networking
reqwest = { version = "0.11", features = ["rustls-tls", "json"] }
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = "0.24"

# Cryptography
ring = "0.17"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0"
x25519-dalek = "2.0"
ed25519-dalek = "2.1"
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
blake3 = "1.5"
sha2 = "0.10"
sha3 = "0.10"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
toml = "0.8"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI features
clap = { version = "4.4", features = ["derive"], optional = true }

# Storage
rusqlite = { version = "0.30", features = ["bundled"], optional = true }

# APIs
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }

# Utilities
bytes = "1.5"
futures = "0.3"
parking_lot = "0.12"
once_cell = "1.19"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tokio-test = "0.4"
mockito = "1.2"
tempfile = "3.8"

[features]
default = ["cli", "storage", "api"]
cli = ["clap"]
storage = ["rusqlite"]
api = ["axum", "tower", "tower-http"]
full = ["cli", "storage", "api"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"

[[bench]]
name = "performance"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
