[package]
name = "avila-codec"
version = "0.1.0"
edition = "2021"
authors = ["Vizzio Team"]
license = "MIT OR Apache-2.0"
description = "Fast and secure encoding/decoding utilities for common formats"
repository = "https://github.com/vizzio/avila-codec"
keywords = ["encoding", "codec", "hex", "base64", "base58"]
categories = ["encoding", "no-std", "algorithms"]
readme = "README.md"

[dependencies]
# avila-error = { path = "../avila-error" }

[dev-dependencies]
# criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["std"]
std = []
simd = []
compression = []

[lib]
name = "avila_codec"
path = "src/lib.rs"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[bench]]
name = "codec_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
