[package]
name = "avila-vision"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
avila-bim = { path = "../avila-bim" }
avila-error = { path = "../avila-error" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "HtmlCanvasElement",
    "WebGlRenderingContext",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlShader",
    "WebGlUniformLocation",
    "XrSession",
    "XrWebGlLayer",
    "XrReferenceSpace",
    "XrFrame",
] }
js-sys = "0.3"

[features]
default = ["std"]
std = []
